--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -24,7 +24,7 @@
 
 	<div class="home-main-content">
 		<div class="home__hero">
-			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what that means—we'd love you to be a part of our community.</div>
+			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities project is our community of scholars:<br/><span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span><br/><br/>Come help us explore what that means—we'd love you to be a part of our community.</div>
 		 <!-- "So let's explore what that means, because we'd love for you to be a part of it." -->
 		</div>
 
@@ -38,7 +38,7 @@
 					<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
 					<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
 				</div>
-				<div class="home-faq__cta"><em>Find answers to these questions and more:</em><br/><a href="#">FAQ Home</a></div>
+				<div class="home-faq__cta"><!--Find answers to these questions and more:<br/--><a href="#">FAQ Home</a></div>
 			</div>
 		</div>
 
@@ -57,7 +57,7 @@
 
 		<div class="home__office-hours">
 			<div class="home-hours__title">Open Office Hours</div>
-			<div class="home-hours__when">Every Monday during fall and spring term, 10am-11:30am.</div>
+			<div class="home-hours__when">Every Monday during fall and spring term,<br/>10am-11:30am.</div>
 			<div class="home-hours__info">Stop by the discussion area just inside the Scholars' Lab Common Room to chat with our DH experts about your ideas, from your earliest questions and broad ideas through formal projects. (See diagram for where we are!)</div>
 		</div>
 
